--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,windows,macos,visualstudiocode,gradle
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,windows,macos,visualstudiocode,gradle
+# Created by https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,intellij+all,windows,macos,visualstudiocode
+
+### Querydsl
+/src/main/generated
+
+### JPA Buddy
+.jpb/
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -167,6 +173,12 @@ Temporary Items
 .history
 .ionide
 
+# Support for Project snippet scope
+.vscode/*.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -194,7 +206,8 @@ $RECYCLE.BIN/
 *.lnk
 
 ### Gradle ###
-../.gradle
+.gradle
+.gradle
 **/build/
 !src/**/build/
 
@@ -216,8 +229,4 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-### Gradle Patch ###
-# Java heap dump
-*.hprof
-
-# End of https://www.toptal.com/developers/gitignore/api/java,intellij+all,windows,macos,visualstudiocode,gradle
+# End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos,visualstudiocode
