--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,intellij+all,windows,macos,visualstudiocode
 
-### Querydsl
-/src/main/generated
-
-### JPA Buddy
-.jpb/
-
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -92,8 +86,8 @@ fabric.properties
 
 .idea/*
 
-#!.idea/codeStyles
-#!.idea/runConfigurations
+!.idea/codeStyles
+!.idea/runConfigurations
 
 ### Java ###
 # Compiled class file
@@ -173,12 +167,6 @@ Temporary Items
 .history
 .ionide
 
-# Support for Project snippet scope
-.vscode/*.code-snippets
-
-# Ignore code-workspaces
-*.code-workspace
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -207,7 +195,6 @@ $RECYCLE.BIN/
 
 ### Gradle ###
 .gradle
-.gradle
 **/build/
 !src/**/build/
 
@@ -228,5 +215,9 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+### Gradle Patch ###
+# Java heap dump
+*.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos,visualstudiocode
