--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,intellij+all,windows,macos,visualstudiocode
 
-
-### querydsl
+### Querydsl
 /src/main/generated
+
+### JPA Buddy
+.jpb/
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -90,8 +92,8 @@ fabric.properties
 
 .idea/*
 
-!.idea/codeStyles
-!.idea/runConfigurations
+#!.idea/codeStyles
+#!.idea/runConfigurations
 
 ### Java ###
 # Compiled class file
@@ -171,6 +173,12 @@ Temporary Items
 .history
 .ionide
 
+# Support for Project snippet scope
+.vscode/*.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -199,6 +207,7 @@ $RECYCLE.BIN/
 
 ### Gradle ###
 .gradle
+.gradle
 **/build/
 !src/**/build/
 
@@ -220,13 +229,4 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-### Gradle Patch ###
-# Java heap dump
-*.hprof
-
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,macos,visualstudiocode
-/.gradle/
-
-/.gradle
-/.gradle/7.6
-/.gradle/buildOutputCleanup/
