--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,8 +25,9 @@ spring:
     rest:
       base-path: /api
       detection-strategy: annotated
+  thymeleaf3:
+    decoupled-logic: true
 
----
 #spring:
 #  config:
 #    activate:
