#50 - 헤로쿠 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -67,3 +67,9 @@ sourceSets {
 clean {
     delete file(generated)
 }
+
+jar {
+    mainfest {
+        attributes('Main-Class': 'com.hosu.projectboard.ProjectBoardApplication')
+    }
+}
